--- a/index.html
+++ b/index.html
@@ -102,19 +102,20 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/eater_layout.svg" alt="..." /></div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/rachunki.svg" alt="..." /></div>
+                    <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                                    <hr class="d-none d-lg-block mb-0 ms-0" />
+                                    <h4 class="text-white">Eater</h4>
+                                    <p class="mb-0 text-white-50">Built with firabse technology</p>
+                                    <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!-- Signup-->
         <section class="signup-section" id="signup">
