--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">Rachunki</h4>
+                                    <p class="mb-0 text-white-50">Built with firebase firestore.The app uses mvvm model ,room technology,retrofit for retriving the data from the firestore database</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Eater</h4>
-                                    <p class="mb-0 text-white-50">Built with firabse technology</p>
+                                    <p class="mb-0 text-white-50">Built with firabase technology.The idea of the app is for helping the users to get their recipies in a random way from the database and get an idea of what to eat</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
