--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/rachunki.svg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/rachunki-layout.svg" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
