--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <!--Featured project row two-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/eater_rounded_layout.svg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/rachunki_rounded_layout.svg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5 order-lg-first">
                         <div class="featured-text text-center text-lg-right">
                             <h4>Shoreline</h4>
@@ -87,7 +87,7 @@
 
                 <!-- Featured Project row three-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/rachunki_rounded_layout.svg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/eater_rounded_layout.svg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Splitter</h4>
@@ -96,9 +96,20 @@
                     </div>
                 </div>
 
+                <!--Featured project row two-->
+                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bvso_rounded_layout.svg" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-5 order-lg-first">
+                        <div class="featured-text text-center text-lg-right">
+                            <h4>Shoreline</h4>
+                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/rachunki__layout.svg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/rachunki_layout.svg" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
