--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Juan Martinez Portfolio" />
         <meta name="author" content="Juan Martinez" />
-        <title>Juan Martinez Portfolio</title>
+        <title>Juan Martinez's Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -56,7 +56,8 @@
                         <p class="text-white-50">
 
                                   <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+                            Hi!,my name is Juan.I make android apps with the best practices of the industry.
+                            Check some of my projects!!
                         </p>
                     </div>
                 </div>
@@ -74,7 +75,7 @@
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Splitter</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <p class="text-black-50 mb-0">Splitter helps you divide the bill between your friends and it gives you the amount of tip you should pay accourding your bill and the percentage you wanna pay.</p>
                         </div>
                     </div>
                 </div>
@@ -83,8 +84,8 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/rachunki_rounded_layout.svg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5 order-lg-first">
                         <div class="featured-text text-center text-lg-right">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Rachunki</h4>
+                            <p class="text-black-50 mb-0">Rachunki helps you keep organize all your incomes and outcomes in a simple and visual way.</p>
                         </div>
                     </div>
                 </div>
@@ -94,20 +95,20 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/eater_rounded_layout.svg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Splitter</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Eater</h4>
+                            <p class="text-black-50 mb-0">Eater helps you to pick a random recipe if you dont know what to eat,aswell you can check the ingridients and steps of the recipe inside the app but you are also free to search a meal/recipe in the app.</p>
                         </div>
                     </div>
                 </div>
 
-                <!--Featured project row two-->
+                <!--Featured project row four-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bvso_rounded_layout.svg" alt="..." /></div>
 
                     <div class="col-xl-4 col-lg-5 order-lg-first">
                         <div class="featured-text text-center text-lg-right">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">The idea of the </p>
+                            <h4>BvsO</h4>
+                            <p class="text-black-50 mb-0">BvsO helps you check if you are in loss or gain in your crypto investments by checking the actual price of the crypto currencies and comparing it with the price you pay for it.</p>
                         </div>
                     </div>
                 </div>
