update of description of skic row

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Who Am I?</h2>
+                        <h2 class="text-white mb-4">Hi!!</h2>
                         <p class="text-white-50">
 
                                   <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            Hi!,my name is Juan.I make android apps with the best practices of the industry.
+                            My name is Juan.I make android apps with the best practices of the industry.
                             Check some of my projects!!
                         </p>
                     </div>
@@ -75,7 +75,7 @@
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Splitter</h4>
-                            <p class="text-black-50 mb-0">Splitter helps you divide the bill between your friends and it gives you the amount of tip you should pay accourding your bill and the percentage you wanna pay.</p>
+                            <p class="text-black-50 mb-0">Splitter enables you divide the bill between your friends and it gives you the amount of tip you should pay accourding your bill and the percentage you wanna pay.</p>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <div class="col-xl-4 col-lg-5 order-lg-first">
                         <div class="featured-text text-center text-lg-right">
                             <h4>Rachunki</h4>
-                            <p class="text-black-50 mb-0">Rachunki helps you keep organize all your incomes and outcomes in a simple and visual way.</p>
+                            <p class="text-black-50 mb-0">Rachunki enables you keep organize all your incomes and outcomes in a simple and visual way.</p>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Eater</h4>
-                            <p class="text-black-50 mb-0">Eater helps you to pick a random recipe if you dont know what to eat,aswell you can check the ingridients and steps of the recipe inside the app but you are also free to search a meal/recipe in the app.</p>
+                            <p class="text-black-50 mb-0">Eater enables you pick a random recipe if you dont know what to eat.The app lets you check the ingridients and steps of the recipe inside.You are also free to search a meal/recipe in the app.</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,17 @@
                     <div class="col-xl-4 col-lg-5 order-lg-first">
                         <div class="featured-text text-center text-lg-right">
                             <h4>BvsO</h4>
-                            <p class="text-black-50 mb-0">BvsO helps you check if you are in loss or gain in your crypto investments by checking the actual price of the crypto currencies and comparing it with the price you pay for it.</p>
+                            <p class="text-black-50 mb-0">BvsO enables you check if you are in loss or gain in your crypto investments by checking the actual price of the crypto currencies and comparing it with the price you pay for it.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Featured Project row five-->
+                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/splitter_rounded_layout.svg" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-5 ">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4>Skic</h4>
+                            <p class="text-black-50 mb-0">Skic enables you to have a profile, share your projects and keep them organize in a place where everybody can see them.This gives an opportinuty for all developer and artists to have a good portfolio where companies or interested people can contact you directly.</p>
                         </div>
                     </div>
                 </div>
