--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
 
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Hi!!</h2>
+                        <h2 class="text-white mb-4">Hello!</h2>
                         <p class="text-white-50">
-
-                                  <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
                             My name is Juan.I make android apps with the best practices of the industry.
                             Check some of my projects!!
                         </p>
@@ -75,7 +73,7 @@
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Splitter</h4>
-                            <p class="text-black-50 mb-0">Splitter enables you divide the bill between your friends and it gives you the amount of tip you should pay accourding your bill and the percentage you wanna pay.</p>
+                            <p class="text-black-50 mb-0"> <a href="https://startbootstrap.com/theme/grayscale/">Splitter</a> enables you divide the bill between your friends and it gives you the amount of tip you should pay accourding your bill and the percentage you wanna pay.</p>
                         </div>
                     </div>
                 </div>
@@ -85,7 +83,7 @@
                     <div class="col-xl-4 col-lg-5 order-lg-first">
                         <div class="featured-text text-center text-lg-right">
                             <h4>Rachunki</h4>
-                            <p class="text-black-50 mb-0">Rachunki enables you keep organize all your incomes and outcomes in a simple and visual way.</p>
+                            <p class="text-black-50 mb-0"><p class="text-black-50 mb-0">Rachunki enables you keep organize all your incomes and outcomes in a simple and visual way.</p>
                         </div>
                     </div>
                 </div>
@@ -96,7 +94,7 @@
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Eater</h4>
-                            <p class="text-black-50 mb-0">Eater enables you pick a random recipe if you dont know what to eat.The app lets you check the ingridients and steps of the recipe inside.You are also free to search a meal/recipe in the app.</p>
+                            <p class="text-black-50 mb-0">  <a href="https://play.google.com/store/apps/details?id=com.epifistudios.eater">Eater</a> enables you pick a random recipe if you dont know what to eat.The app lets you check the ingridients and steps of the recipe inside.You are also free to search a meal/recipe in the app.</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +106,7 @@
                     <div class="col-xl-4 col-lg-5 order-lg-first">
                         <div class="featured-text text-center text-lg-right">
                             <h4>BvsO</h4>
-                            <p class="text-black-50 mb-0">BvsO enables you check if you are in loss or gain in your crypto investments by checking the actual price of the crypto currencies and comparing it with the price you pay for it.</p>
+                            <p class="text-black-50 mb-0"><a href="https://play.google.com/store/apps/details?id=com.epifi.bvso">BvsO</a> BvsO enables you check if you are in loss or gain in your crypto investments by checking the actual price of the crypto currencies and comparing it with the price you pay for it.</p>
                         </div>
                     </div>
                 </div>
@@ -122,6 +120,9 @@
                         </div>
                     </div>
                 </div>
+
+
+
 
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
