--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <h2 class="text-white mb-4">Hello!</h2>
                         <p class="text-white-50">
                             My name is Juan.I make android apps with the best practices of the industry.
-                            \n Check some of my projects!!
+                            <span>Check some of my projects!!</span>
                         </p>
                     </div>
                 </div>
