update in the text of the about

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Hello!</h2>
                         <p class="text-white-50">
-                            My name is Juan.I make android apps with the best practices of the industry.
+                            <span>My name is Juan.I make android apps with the best practices of the industry.</span>
                             <span>Check some of my projects!!</span>
                         </p>
                     </div>
