--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -45,6 +46,13 @@
                 </div>
             </div>
         </header>
+        <style>
+@media (max-width: 600px) {
+  .facet_sidebar {
+    display: none;
+  }
+}
+</style>
         <!-- About-->
         <section class="about-section text-center" id="about">
 
@@ -55,7 +63,7 @@
                         <h2 class="text-white mb-4">Hello!</h2>
                         <p class="text-white-50">
                             <span>My name is Juan.I make android apps with the best practices of the industry.</span>
-                            
+
                             <span>Check some of my projects!!</span>
                         </p>
                     </div>
