--- a/index.html
+++ b/index.html
@@ -46,13 +46,7 @@
                 </div>
             </div>
         </header>
-        <style>
-@media (max-width: 600px) {
-  .facet_sidebar {
-    display: none;
-  }
-}
-</style>
+
         <!-- About-->
         <section class="about-section text-center" id="about">
 
@@ -62,9 +56,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Hello!</h2>
                         <p class="text-white-50">
-                            <span>My name is Juan.I make android apps with the best practices of the industry.</span>
-
-                            <span>Check some of my projects!!</span>
+                          My name is Juan.I make android apps with the best practices of the industry. <br/>Check some of my projects!!
                         </p>
                     </div>
                 </div>
