--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>-->
+            </div>-->
+        </section>
 
 
         <!-- Contact-->
