fixed bug with icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Juan Martinez Portfolio" />
         <meta name="author" content="Juan Martinez" />
         <title>Juan Martinez's Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="assets/icon_juan_martinez" />
+        <link rel="icon" type="image/x-icon" href="assets/icon_juan_martinez.svg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
