update the url of splitter

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="col-xl-4 col-lg-5 ">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Splitter</h4>
-                            <p class="text-black-50 mb-0"> <a href="https://startbootstrap.com/theme/grayscale/">Splitter</a> enables you divide the bill between your friends and it gives you the amount of tip you should pay accourding your bill and the percentage you wanna pay.</p>
+                            <p class="text-black-50 mb-0"> <a href="https://play.google.com/store/apps/details?id=com.epifi.splitter">Splitter</a> enables you divide the bill between your friends and it gives you the amount of tip you should pay accourding your bill and the percentage you wanna pay.</p>
                         </div>
                     </div>
                 </div>
